Implement JDBC setFetchSize() and setMaxRows() for Statement configuration
This commit implements two critical JDBC Statement methods that were previously
non-functional:

**setFetchSize() / getFetchSize():**
- Added fetchSize field to BQStatement with proper getter/setter
- Applied via QueryJobConfiguration.setMaxResults() for pagination control
- Controls BigQuery result pagination (rows per page)
- Defaults to connection's pageSize property (10,000)

**setMaxRows() / getMaxRows():**
- Enforced at ResultSet level in BQResultSet.next()
- Tracks rowCount and stops iteration when limit reached
- Must be enforced in ResultSet (not query config) because BigQuery's
  setMaxResults() only controls pagination, not total row limit

**Additional fixes:**
- Fixed BQResultSetMetaDataTest mocking to include fieldList.get(0)
- Added abstract getEffectiveFetchSize() method to AbstractBQStatement
- Removed unused import from StorageReadResultSet

**Tests:**
- Added StatementConfigurationTest with 27 comprehensive integration tests
- All 147 integration tests passing

The implementation follows JDBC 4.3 specification while respecting BigQuery's
API constraints. Both features are now fully functional and tested against the
BigQuery emulator.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>